--- a/tools/pipelines/run-extractor.yaml
+++ b/tools/pipelines/run-extractor.yaml
@@ -206,7 +206,7 @@ stages:
 
                 # The source and target branches for the pull request
                 $sourceBranch = "${{ parameters.TARGET_BRANCH_NAME }}"
-                $targetBranch = "artifacts-from-portal-build-$(Build.BuildId)""
+                $targetBranch = "artifacts-from-portal-build-$(Build.BuildId)"
 
                 Write-Information "Creating temporary folder..."
                 $temporaryFolderPath = Join-Path "$(Agent.TempDirectory)" "artifacts-from-portal"
