--- a/tools/pipelines/run-extractor.yaml
+++ b/tools/pipelines/run-extractor.yaml
@@ -202,7 +202,7 @@ stages:
                 # GitHub repository and token details
                 $githubRepoOwner = "${{ parameters.GITHUB_OWNER }}"
                 $githubRepoName = "${{ parameters.APIM_REPOSITORY_NAME }}"
-                $githubToken = "$env:GITHUB_PAT"
+                $githubToken = "${env:GITHUB_PAT}"
 
                 # The source and target branches for the pull request
                 $sourceBranch = "${{ parameters.TARGET_BRANCH_NAME }}"
