Update run-extractor.yaml for Azure Pipelines

--- a/tools/pipelines/run-extractor.yaml
+++ b/tools/pipelines/run-extractor.yaml
@@ -287,6 +287,7 @@ stages:
                 }
                 $uri = "https://api.github.com/repos/$githubRepoOwner/$githubRepoName/pulls"
                 $response = Invoke-RestMethod -Uri $uri -Method Post -Headers $headers -Body $prDataJson
+                echo $response
                 if ($response.Status -ne "201 Created") { throw "Creating pull request failed." }
 
                 Write-Information "Deleting temporary folder contents..."
