--- a/tools/pipelines/run-extractor.yaml
+++ b/tools/pipelines/run-extractor.yaml
@@ -287,8 +287,7 @@ stages:
                 }
                 $uri = "https://api.github.com/repos/$githubRepoOwner/$githubRepoName/pulls"
                 $response = Invoke-WebRequest -Uri $uri -Method Post -Headers $headers -Body $prDataJson
-                echo $response
-                if ($response.StatusCode -ne "201 Created") { throw "Creating pull request failed." }
+                if ($response.StatusCode -ne "201") { throw "Creating pull request failed." }
 
                 Write-Information "Deleting temporary folder contents..."
                 Remove-Item -Path "$temporaryFolderPath" -Recurse -Force
