Update run-publisher.yaml for Azure Pipelines

--- a/tools/pipelines/run-publisher.yaml
+++ b/tools/pipelines/run-publisher.yaml
@@ -7,6 +7,7 @@ trigger:
   paths:
     exclude:
     - tools/*
+    - configuration.*.yaml
 
 parameters:
   - name: API_MANAGEMENT_SERVICE_OUTPUT_FOLDER_PATH
