--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -41,6 +41,7 @@ diagnostics:
         loggerId: "/subscriptions/8308f340-4d69-4343-a5af-5437a6121b15/resourceGroups/red-scus-apiopsdemo-rg-dev/providers/Microsoft.ApiManagement/service/red-apim-dev/loggers/red-scus-apim-ai-dev"
 apis:
   - name: "basic-calculator"
+  - server-url: "https://google.com/test"
     diagnostics:
       - name: applicationinsights
         properties:
