--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -1,4 +1,4 @@
-apimServiceName: red-apim-prd
+apimServiceName: brd-apim-prd
 namedValues:
   - name: environment
     properties:
@@ -20,17 +20,17 @@ namedValues:
     properties:
       displayName: signingKey
       keyVault: 
-        secretIdentifier: https://red-scus-apimdemo-kv-prd.vault.azure.net/secrets/APIM-signing-key
+        secretIdentifier: https://brd-scus-apimdemo-kv-prd.vault.azure.net/secrets/APIM-signing-key
   - name: 639121f85ddd1701d02ea23f
     properties:
       displayName: Logger-Credentials--639121f85ddd1701d02ea240
       value: "{#appInsightsLoggerKey#}"
 loggers:
-    - name: red-scus-apim-ai-dev
+    - name: brd-scus-apim-ai-dev
       properties:
         loggerType: applicationInsights
         description: App insights logger info
-        resourceId: "/subscriptions/8308f340-4d69-4343-a5af-5437a6121b15/resourceGroups/red-scus-apiopsdemo-rg-prd/providers/microsoft.insights/components/red-scus-apim-ai-prd"
+        resourceId: "/subscriptions/ac81efbd-2d16-4829-9c4c-228a17db1f32/resourceGroups/brd-scus-apiopsdemo-rg-prd/providers/microsoft.insights/components/brd-scus-apim-ai-prd"
         credentials:
           instrumentationKey: "{{Logger-Credentials--639121f85ddd1701d02ea240}}"
         isBuffered: true
@@ -38,13 +38,13 @@ diagnostics:
     - name: applicationinsights
       properties:
         verbosity: Error
-        loggerId: "/subscriptions/8308f340-4d69-4343-a5af-5437a6121b15/resourceGroups/red-scus-apiopsdemo-rg-dev/providers/Microsoft.ApiManagement/service/red-apim-dev/loggers/red-scus-apim-ai-dev"
+        loggerId: "/subscriptions/ac81efbd-2d16-4829-9c4c-228a17db1f32/resourceGroups/brd-scus-apiopsdemo-rg-dev/providers/Microsoft.ApiManagement/service/brd-apim-prd/loggers/red-scus-apim-ai-dev"
 apis:
   - name: "basic-calculator"
     properties:
-      server-url: "https://google.com/test"
+      server-url: "http://calcapi.cloudapp.net/api/from-config/"
     diagnostics:
       - name: applicationinsights
         properties:
           verbosity: Error
-          loggerId: "/subscriptions/8308f340-4d69-4343-a5af-5437a6121b15/resourceGroups/red-scus-apiopsdemo-rg-dev/providers/Microsoft.ApiManagement/service/red-apim-dev/loggers/red-scus-apim-ai-dev"
+          loggerId: "/subscriptions/ac81efbd-2d16-4829-9c4c-228a17db1f32/resourceGroups/brd-scus-apiopsdemo-rg-dev/providers/Microsoft.ApiManagement/service/brd-apim-prd/loggers/red-scus-apim-ai-dev"
