--- a/tools/pipelines/run-capture.yaml
+++ b/tools/pipelines/run-capture.yaml
@@ -55,8 +55,8 @@ stages:
               AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
               AZURE_TENANT_ID: $(AZURE_TENANT_ID)
               AZURE_SUBSCRIPTION_ID: $(AZURE_SUBSCRIPTION_ID)
-              RESOURCE_GROUP_NAME: $(RESOURCE_GROUP_NAME)
-              APIM_INSTANCE_NAME: $(APIM_INSTANCE_NAME)
+              RESOURCE_GROUP_NAME: ${{ parameters.RESOURCE_GROUP_NAME }}
+              APIM_INSTANCE_NAME: ${{ parameters.APIM_INSTANCE_NAME }}
 
           - task: PublishPipelineArtifact@1
             inputs:
